--- a/css/indexCSS/LEARN ANYTHING.css
+++ b/css/indexCSS/LEARN ANYTHING.css
@@ -40,24 +40,24 @@ body {
 #learnAnythingText span {
   color: #6500ca;
   font-weight: 700;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   text-transform: uppercase;
 }
 #learnAnythingText h2 {
   font-weight: 700;
-  font-size: 3.5rem;
+  font-size: 2.6rem;
   width: 37.6rem;
   margin: 3rem 0 5rem;
 }
 .learnAnythingFeatures {
   background: #e4fff9;
-  min-width: 30rem;
+  min-width: 10rem;
   max-width: 60rem;
   padding: 3rem 3rem 3rem 0;
   margin-bottom: 3rem;
   display: flex;
-  height: 21.2rem;
-  gap: 10px;
+  height: 19rem;
+  gap: 1rem;
 }
 .learnAnythingFeatures.three {
   margin-bottom: 0;
@@ -77,7 +77,7 @@ body {
 }
 .learnAnythingCard h3 {
   font-weight: 400;
-  font-size: 2.9rem;
+  font-size: 2.2rem;
 }
 .learnAnythingCard p {
   font-weight: 400;
@@ -114,5 +114,23 @@ body {
   }
 }
 @media (max-width: 534px) {
-    /* still need to edit for responsiveness */
+  #learnAnythingText h2 {
+    width: 100%;
+  }
+  .learnAnythingFeatures {
+    padding: 3rem;
+    height: auto;
+    flex-direction: column;
+    gap: 2rem;
+  }
+  .learnAnythingSVG {
+    flex: 0 0 10%;
+    max-width: 100%;
+  }
+  .learnAnythingCard h3 {
+    text-align: center;
+  }
+  .learnAnythingCard p {
+    text-align: center;
+  }
 }
