fixed the issue of heroBanner being too far from text

--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -70,6 +70,7 @@ nav > .wrapper{
     background-color: #6500CA;
     color: white;
     border-radius: 30px;
+    border: none;
 }
 .btnSeeCourses:hover{
     cursor: pointer;
