--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    color: #333333;
 }
 .wrapper{
     width: 80%;
@@ -29,7 +30,6 @@ nav > .wrapper{
     list-style: none;
 }
 .navLink{
-    color: black;
     text-decoration: none;
 }
 .hamburger{
@@ -65,8 +65,8 @@ nav > .wrapper{
 }
 .btnSeeCourses{
     margin-top: 20px;
-    padding: 20px 30px;
-    font-size: 18px;
+    padding: 10px 20px;
+    font-size: 15px;
     background-color: #6500CA;
     color: white;
     border-radius: 30px;
@@ -165,13 +165,18 @@ nav > .wrapper{
         width: 24%;
     }
 }
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 800px){
     header{
-        height: 650px;
+        height: 700px;
     }
     .heroBanner > img{
         height: 401.67px;
         width: 400px;
+    }
+}
+@media only screen and (max-width: 700px){
+    header{
+        height: 650px;
     }
     .hamburger{
         display: block;
@@ -211,4 +216,35 @@ nav > .wrapper{
         ;
     }
 }
-
+@media only screen and (max-width: 600px){
+    .bannerText{
+        padding-top: 0;
+        width: 200px;
+    }
+    .heroBanner {
+        right: 0;
+    }
+}
+@media only screen and (max-width: 600px){
+    .heroBanner > img{
+        height: 301.67px;
+        width: 300px;
+    }
+}
+@media only screen and (max-width: 400px){
+    header{
+        height: 575px;
+    }
+    .heroBanner > img{
+        height: 201.67px;
+        width: 200px;
+    }
+}
+@media only screen and (max-width: 300px){
+    .landingPage{
+        padding-top: 100px;
+    }
+    .heroBanner{
+        margin-top: -70px;
+    }
+}
