fixed the padding of info

--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -99,7 +99,7 @@ nav > .wrapper{
     ;
 }
 .info > .wrapper div{
-    padding: 20px;
+    padding: 2em 0;
 }
 .students{
     grid-area: students;
@@ -255,5 +255,9 @@ nav > .wrapper{
     }
     .heroBanner{
         margin-top: -30px;
+    }
+
+    .info > .wrapper{
+        width: 95%;
     }
 }
