--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -148,7 +148,7 @@ nav > .wrapper{
     padding-top: 50px;
     display: grid;
     /* 7 columns */
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 3% 1fr 3% 1fr 3% 1fr 1fr;
     grid-template-rows: 1fr 20% 20% 20% 1fr;
 }
 .card{
@@ -157,6 +157,13 @@ nav > .wrapper{
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 0 3px #026E64;
+}
+.card:nth-child(4){
+    border: 1px solid #6500CA;
+    background-color: #C1FFF2;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 3px #6500CA;
 }
 .card > h3, .card > h4, .card > h5{
     margin: 15px 0;
@@ -180,16 +187,16 @@ nav > .wrapper{
     grid-row-end: 5;
 }
 .card:nth-child(1){
-    grid-column: 1;
+    grid-column: 2;
 }
 .card:nth-child(2){
-    grid-column: 3;
+    grid-column: 4;
 }
 .card:nth-child(3){
-    grid-column: 5;
+    grid-column: 6;
 }
 .card:nth-child(4){
-    grid-column: 7;
+    grid-column: 8;
 }
 
 /* Vectors... Hindi ko po alam kung paano ilagay ung bilog bilog kaya nag export nalang po ako para malagay sa bg */
@@ -237,11 +244,11 @@ nav > .wrapper{
     }
     .card:nth-child(3){
         grid-row: 1;
-        grid-column: 6;
+        grid-column: 8;
     }
     .card:nth-child(4){
         grid-row: 3;
-        grid-column: 6;
+        grid-column: 8;
     }
 }
 @media only screen and (max-width: 900px){
@@ -274,6 +281,9 @@ nav > .wrapper{
         width: 24%;
     }
 
+    .info_offers > .wrapper{
+        width: 100%;
+    }
     .offers{
         grid-template-rows: 1fr 1fr;
     }
@@ -352,6 +362,7 @@ nav > .wrapper{
     .see_more{
         margin-top: 25px;
     }
+    
 }
 @media only screen and (max-width: 500px){
     .offers{
