--- a/css/indexCSS/what We Offer & Student Enrolled.css
+++ b/css/indexCSS/what We Offer & Student Enrolled.css
@@ -5,7 +5,10 @@
     font-family: 'Inter', sans-serif;
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
-
+.course-section {
+    width: 90%;
+    margin: auto;
+}
 .headtop {
     text-align: center;
 }
@@ -22,10 +25,11 @@
 .box {
     background-color: #C1FFF2;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    width: 20em;
+    max-width: 25em;
     padding: 1em;
-    border: 2px solid #026E64;
+    border: 3px solid #026E64;
     border-radius: 8px;
+    min-width: 15em;
 }
 .imge-box {
     width: 100%;
@@ -69,4 +73,46 @@
     background-color: #6500CA;
     color: #ffffff;
     transition: .3s all;
+}
+
+.course-main {
+    display: flex;
+    overflow-x: auto;
+    gap: 2em;
+    scroll-snap-type: x mandatory;
+}
+.box {
+    scroll-snap-align: center;
+}
+.order {
+    order: -1;
+    border: 3px solid #6500CA !important; 
+}
+.order .imge-box{
+    border: 2px solid #6500CA;
+}
+.order button {
+    background-color: #6500CA;
+    color: #ffffff;
+}
+@media only screen and (min-width: 738px) {
+    .course-main {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+    }
+    .course-section {
+        width: 80%;
+        margin: auto;
+    }
+    .order {
+        order: 4;
+        border: 2px solid #6500CA;
+    }
+}
+@media only screen and (min-width: 1400px) {
+    .padding {
+        margin-top: 10em;
+    }
 }
