--- a/css/indexCSS/what We Offer & Student Enrolled.css
+++ b/css/indexCSS/what We Offer & Student Enrolled.css
@@ -11,6 +11,7 @@
 }
 .headtop {
     text-align: center;
+    margin-bottom: 2em;
 }
 .headtop label {
     color: #6500CA;
@@ -25,7 +26,7 @@
 .box {
     background-color: #C1FFF2;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    max-width: 25em;
+    width: 18em;
     padding: 1em;
     border: 3px solid #026E64;
     border-radius: 8px;
@@ -35,11 +36,13 @@
     width: 100%;
     border: 2px solid #026E64;
     margin-bottom: 1em;
+    height: 10em;
 
 }
 .imge-box img {
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
 .description {
     color: #333333;
@@ -47,6 +50,7 @@
 .description h3 {
     font-size: 1.7em;
     margin-bottom: .6em;
+    color: #026E64;
 }
 .description p{
     color: #6e6e6e;
@@ -95,7 +99,7 @@
     background-color: #6500CA;
     color: #ffffff;
 }
-@media only screen and (min-width: 738px) {
+@media only screen and (min-width: 838px) {
     .course-main {
         display: flex;
         flex-wrap: wrap;
@@ -103,7 +107,7 @@
         align-items: center;
     }
     .course-section {
-        width: 80%;
+        width: 90%;
         margin: auto;
     }
     .order {
@@ -112,7 +116,14 @@
     }
 }
 @media only screen and (min-width: 1400px) {
+    .course-section {
+        width: 90%;
+        margin: auto;
+    }
     .padding {
         margin-top: 10em;
+    }
+    .headtop {
+        margin-bottom: 0;
     }
 }
