--- a/aboutus/about.css
+++ b/aboutus/about.css
@@ -18,7 +18,9 @@
     color: #333333;
     font-size: 1em;
 }
-
+h2 {
+    font-size: 2em;
+}
 .teachers {
     min-width: 10em;
     max-width: 35em;
