--- a/css/indexCSS/what We Offer & Student Enrolled.css
+++ b/css/indexCSS/what We Offer & Student Enrolled.css
@@ -8,6 +8,7 @@
 .course-section {
     width: 90%;
     margin: auto;
+    margin-top: 4em !important;
 }
 .headtop {
     text-align: center;
@@ -126,4 +127,10 @@
     .headtop {
         margin-bottom: 0;
     }
+}
+.buttom button {
+    width: 10em !important;
+    background-color: #6500CA;
+    color: #ffffff;
+    box-shadow: 2px 6px 8px -2px rgba(101, 0, 202, 0.47);
 }
