Reduce some text

--- a/css/indexCSS/Testimonial.css
+++ b/css/indexCSS/Testimonial.css
@@ -1,4 +1,4 @@
-@import url(//cdn.rawgit.com/rtaibah/dubai-font-cdn/master/dubai-font.css);
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 
 *,
@@ -28,8 +28,8 @@ body {
     width: 100%;
     height: auto;
     font-size: 16px;
-    font-family: Dubai-Light;
-		background: #E3FFF9;
+    font-family: 'Inter', sans-serif;
+	background: #E3FFF9;
 }
 
 .testim {
