--- a/css/contactCSS/messageUs.css
+++ b/css/contactCSS/messageUs.css
@@ -65,8 +65,9 @@ html {
   margin-bottom: 5rem;
 }
 #getInTouchFlex {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template: 1fr / 1fr 1fr 1fr;
+  gap: 7rem;
 }
 #getInTouchFlex article {
   flex: 0 0 calc(100% / 3);
@@ -114,7 +115,7 @@ html {
 .getInTouchData p {
   margin: 1.5rem auto;
   font-size: 1.6rem;
-  width: 20rem;
+  /* width: 20rem; */
   text-align: center;
   font-weight: 400;
 }
@@ -148,6 +149,7 @@ html {
   line-height: 189.52%;
   max-width: 41.8rem;
   font-size: 1.8rem;
+  text-align: justify;
 }
 #messageUsForm {
   flex: 0 0 55%;
@@ -185,7 +187,6 @@ html {
   width: 12rem;
   height: 4rem;
   margin-left: auto;
-  margin-right: 4rem;
   background: #6500ca;
   box-shadow: 2px 6px 8px -2px rgba(101, 0, 202, 0.47);
   border-radius: 14px;
@@ -193,10 +194,81 @@ html {
   font-size: 1.6rem;
   border: none;
 }
+@media (min-width: 1500px) {
+  #messageUs {
+    padding: 7.5rem 12rem;
+  }
+}
+@media (min-width: 1100px) {
+  .getInTouchData {
+    height: 8rem;
+    width: 30rem;
+  }
+  #messageUs {
+    padding: 7.5rem 4rem;
+    gap: 3rem;
+  }
+  #messageUsText p {
+    max-width: 55rem;
+  }
+}
+@media (max-width: 1071px) {
+  .getInTouchData {
+    height: 8rem;
+  }
+}
 @media (max-width: 925px) {
+  #getInTouch {
+    padding: 5rem 0;
+  }
+  #getInTouchFlex {
+    grid-template: 1fr auto / 1fr 1fr;
+    gap: 7rem;
+  }
+  #getInTouchArticleOne {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  #getInTouchArticleTwo {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  #getInTouchFlex article#getInTouchArticleThree {
+    grid-area: 2 / 1 / 3 / 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  #getInTouchArticleThree .getInTouchInfo {
+    grid-area: 1 / 1 / 2 / 3;
+    align-items: center;
+  }
+  #getInTouchArticleThree .getInTouchData.one {
+    grid-area: 2 / 1 / 3 / 2;
+    margin: 0 auto;
+  }
+  #getInTouchArticleThree .getInTouchData.two {
+    grid-area: 2 / 2 / 3 / 3;
+    margin: 0 auto;
+  }
+
+  #messageUs {
+    padding: 5rem 0;
+    grid-template: 3rem;
+  }
+  #messageUsText h2 {
+    margin-bottom: 3rem;
+  }
+  #messageUsText p {
+    max-width: 100%;
+
+    margin-bottom: 2rem;
+  }
+  #messageUsForm button {
+    margin-right: 0;
+  }
+}
+@media (max-width: 700px) {
   #messageUs {
     flex-direction: column;
-    padding: 5rem 0;
+    gap: 2rem;
   }
   #messageUsText,
   #messageUsForm {
@@ -206,15 +278,6 @@ html {
   }
   #messageUsText h2 {
     text-align: center;
-    margin-bottom: 3rem;
-  }
-  #messageUsText p {
-    max-width: 100%;
-    text-align: justify;
-    margin-bottom: 2rem;
-  }
-  #messageUsForm button {
-    margin-right: 0;
   }
 }
 @media (max-width: 534px) {
@@ -224,6 +287,11 @@ html {
   #messageUsForm button {
     margin-top: 1rem;
     border-radius: 7px;
+  }
+}
+@media (max-width: 330px) {
+  #messageUsText p {
+    display: none;
   }
 }
 
