--- a/css/contactCSS/messageUs.css
+++ b/css/contactCSS/messageUs.css
@@ -167,6 +167,7 @@ html {
   background: #fff;
   outline: none;
   border: none;
+  font-size: 1.6rem;
 }
 #messageUsName {
   display: flex;
@@ -193,6 +194,7 @@ html {
   color: #fff;
   font-size: 1.6rem;
   border: none;
+  cursor: pointer;
 }
 @media (min-width: 1500px) {
   #messageUs {
@@ -266,6 +268,80 @@ html {
   }
 }
 @media (max-width: 700px) {
+  #getInTouch h2 {
+    margin-bottom: 8rem;
+  }
+  #getInTouchFlex {
+    grid-template: auto auto auto / 1fr;
+    gap: 7rem;
+  }
+  #getInTouchFlex article {
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    gap: 2rem;
+  }
+  #getInTouchArticleOne {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  #getInTouchArticleOne .getInTouchInfo {
+    grid-area: 1 / 1 / 3 / 2;
+    align-items: center;
+  }
+  #getInTouchArticleOne .getInTouchData.one {
+    grid-area: 1 / 2 / 2 / 4;
+    margin-right: auto;
+  }
+  #getInTouchArticleOne .getInTouchData.two {
+    grid-area: 2 / 2 / 3 / 4;
+    margin-right: auto;
+  }
+  #getInTouchArticleTwo {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  #getInTouchArticleTwo .getInTouchInfo {
+    grid-area: 1 / 3 / 3 / 4;
+    align-items: center;
+  }
+  #getInTouchArticleTwo .getInTouchData.one {
+    grid-area: 1 / 1 / 2 / 3;
+    margin-left: auto;
+  }
+  #getInTouchArticleTwo .getInTouchData.two {
+    grid-area: 2 / 1 / 3 / 3;
+    margin-left: auto;
+  }
+  #getInTouchFlex article#getInTouchArticleThree {
+    grid-area: 3 / 1 / 4 / 2;
+    grid-template: 1fr 1fr / 1fr 1fr 1fr;
+  }
+  #getInTouchArticleThree .getInTouchInfo {
+    grid-area: 1 / 1 / 3 / 2;
+    align-items: center;
+  }
+  #getInTouchArticleThree .getInTouchData.one {
+    grid-area: 1 / 2 / 2 / 4;
+    margin: 0 auto 0 0;
+  }
+  #getInTouchArticleThree .getInTouchData.two {
+    grid-area: 2 / 2 / 3 / 4;
+    margin: 0 auto 0 0;
+  }
+  .getInTouchData {
+    max-width: 70rem;
+  }
+  :is(#getInTouchArticleOne, #getInTouchArticleThree) .getInTouchData h3 {
+    text-align: start;
+  }
+  #getInTouchArticleTwo .getInTouchData h3 {
+    text-align: end;
+  }
+  .getInTouchData p {
+    text-align: start;
+  }
+  #getInTouchArticleTwo .getInTouchData p {
+    text-align: end;
+  }
+
   #messageUs {
     flex-direction: column;
     gap: 2rem;
@@ -281,6 +357,58 @@ html {
   }
 }
 @media (max-width: 534px) {
+  #getInTouch {
+    padding: 5rem 0 3rem;
+}
+  #getInTouch h2 {
+    margin-bottom: 5rem;
+  }
+  #getInTouchFlex {
+    grid-template: auto auto auto / 1fr;
+    gap: 4rem;
+  }
+  #getInTouchFlex article {
+    grid-template: auto auto auto / 1fr;
+    gap: 2rem;
+  }
+  #getInTouchArticleOne {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  :is(#getInTouchArticleOne, #getInTouchArticleTwo, #getInTouchArticleThree)
+    .getInTouchInfo {
+    grid-area: 1 / 1 / 2 / 2;
+    align-items: center;
+  }
+  :is(#getInTouchArticleOne, #getInTouchArticleTwo, #getInTouchArticleThree)
+    .getInTouchData.one {
+    grid-area: 2 / 1 / 3 / 2;
+    margin: auto;
+  }
+  :is(#getInTouchArticleOne, #getInTouchArticleTwo, #getInTouchArticleThree)
+    .getInTouchData.two {
+    grid-area: 3 / 1 / 4 / 2;
+    margin: auto;
+  }
+  #getInTouchArticleTwo {
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  #getInTouchFlex article#getInTouchArticleThree {
+    grid-area: 3 / 1 / 4 / 2;
+    grid-template: auto auto auto / 1fr;
+  }
+  .getInTouchData {
+    max-width: 70rem;
+  }
+  :is(#getInTouchArticleOne, #getInTouchArticleThree, #getInTouchArticleTwo)
+    .getInTouchData
+    h3 {
+    text-align: center;
+  }
+  .getInTouchData p,
+  #getInTouchArticleTwo .getInTouchData p {
+    text-align: center;
+  }
+
   #messageUsName {
     flex-direction: column;
   }
