--- a/css/indexCSS/LEARN ANYTHING.css
+++ b/css/indexCSS/LEARN ANYTHING.css
@@ -1,7 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-.learnAnything-section {
-  font-size: 62.5%;
-}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,7 +12,7 @@
   overflow-x: hidden;
   background: #c1fff2;
   font-size: 1.6rem;
-  margin: 0 auto;
+  margin: 4em auto;
 }
 #learnAnything {
   width: 90%;
@@ -48,20 +46,34 @@
 }
 #learnAnythingText h2 {
   font-weight: 700;
-  font-size: 2.6rem;
+  font-size: 2rem;
   width: 37.6rem;
-  margin: 3rem 0 5rem;
+  margin: 1rem 0 3rem;
 }
 .learnAnythingFeatures {
   background: #e4fff9;
   min-width: 10rem;
   max-width: 60rem;
-  padding: 3rem 3rem 3rem 0;
+  padding: 2rem 1rem ;
   margin-bottom: 3rem;
   display: flex;
-  height: 19rem;
   gap: 1rem;
+  transition: .3s ease-in-out;
 }
+.learnAnythingFeatures:hover {
+  background-color: #6500ca;
+  transition: .3s all;
+} 
+.learnAnythingFeatures:hover h3 {
+  color: #ffffff;
+}
+.learnAnythingFeatures:hover p {
+  color: #ffffff;
+}
+.learnAnythingFeatures:hover svg path  {
+  fill: #ffffff;
+}
+
 .learnAnythingFeatures.three {
   margin-bottom: 0;
 }
@@ -79,12 +91,13 @@
   margin: auto 0;
 }
 .learnAnythingCard h3 {
-  font-weight: 400;
-  font-size: 2.2rem;
+  font-weight: 700;
+  font-size: 1.7rem;
+  color: #026E64;
 }
 .learnAnythingCard p {
   font-weight: 400;
-  font-size: 1.7rem;
+  font-size: 1.2rem;
 }
 @media (max-width: 925px) {
   #learnAnything {
