--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -5,26 +5,38 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
     color: #333333;
+    scroll-behavior: smooth;
+}
+body {
+    overflow-x: hidden;
 }
 .wrapper{
     width: 80%;
     margin: auto;
+    height: 100%;
 }
 header{
     background-color: #C1FFF2;
-    height: 980px;
+    height: 100vh;
+    min-height: 500px;
+    position: relative;
 }
-nav{
-    position: fixed;
+.main-nav{
+    position: sticky;
     background-color: #026E64;
     width: 100%;
     z-index: 10000;
 }
-nav > .wrapper{
-    padding: 20px;
+.main-nav > .wrapper{
+    padding: .5em 0;
     display: flex;
+    align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+.main-nav img {
+    width: 15em;
+    height: 5em;
 }
 .navMenu{
     display: flex;
@@ -32,14 +44,70 @@ nav > .wrapper{
 }
 .navList{
     list-style: none;
+    font-size: 1.2em;
 }
 .navLink{
     text-decoration: none;
     color: black;
 }
+
+
 .hamburger{
-    display: none;
+    display: block;
+    /* position: absolute; */
+    z-index: 100;
 }
+.hamburger.active .bar:nth-child(2){
+    opacity: 0;
+}
+.hamburger.active .bar:nth-child(1){
+    transform: translateY(8px) rotate(45045deg);
+}
+.hamburger.active .bar:nth-child(3){
+    transform: translateY(-8px) rotate(-45045deg);
+}
+.burger-toggel{
+    transform: translateX(0) !important; 
+}
+
+.navMenu{
+    transform: translateX(100%); 
+    position: absolute;
+    top: 0;
+    right: 0;
+    gap: 5px;
+    padding: 58px 0 20px;
+    width: 70%;
+    height: 100vh;
+    text-align: center;
+    transition: 0.3s;
+    margin-top: 2em;
+    text-align: start;
+    flex-direction: column;
+    background-color: #026E64;
+    z-index: -1;
+    transition: .3s ease-in-out;
+}
+.navMenu.active{
+    right: 0;
+}
+.navMenu li {
+    padding: 1.2em 1em;
+}
+.navMenu li:hover {
+    border-left: 10px solid #6500CA;
+    background-color: #C1FFF2;
+    transition: .3s all;
+    
+}
+.navMenu li:hover a  {
+    color: #6500CA;
+}
+
+.hamburger{
+    display: block;
+}
+
 .bar{
     display: block;
     width: 25px;
@@ -49,45 +117,71 @@ nav > .wrapper{
     transition: all 0.3s ease-in-out;
     background-color: black;
 }
+
 /* So the logo can be seen even after toggling the burger */
 .logo{
     z-index: 1000;
 }
 
 .landingPage{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    max-width: 1224px;
-    margin: auto;
-    padding-top: 70px;
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr; */
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2em;
+    /* text-align: center; */
+    width: 100%;
+    /* padding-top: 70px; */
+    height: 100%;
 }
 .bannerText{
-    z-index: 10;
-    padding-top: 180px;
-    width: 400px;
+    /* z-index: 10; */
+    /* padding-top: 180px; */
+    /* width: 400px; */
+    width: 100%;
+    z-index: 2;
 }
 .bannerText > h1{
     padding-bottom: 20px;
+    font-size: 3em;
+    line-height: 133.52%;
+    margin-bottom: .2em;
+}
+.bannerText p {
+    line-height: 141.02%;
+    color: #575757;
+    font-size: 1.3em;
 }
 #text{
     color: #026E64;
 }
 .btnSeeCourses{
-    margin-top: 20px;
-    padding: 10px 20px;
-    font-size: 15px;
+    margin-top: 2em;
+    width: 10em;
+    padding: .7em 0;
+    font-size: 1.1em;
     background-color: #6500CA;
     color: white;
-    border-radius: 30px;
+    border-radius: 10px;
     border: none;
+    box-shadow: 2px 6px 8px -2px rgba(101, 0, 202, 0.47);
+    font-weight: 700;
+    
 }
 .btnSeeCourses:hover{
     cursor: pointer;
 }
 .heroBanner{
-    grid-column-start: 3;
+    display: none; 
+    max-width: 50em;
+    height: 100%;
 }
-
+.heroBanner img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
 
 .info{
     background-color: #8FF8B6;
@@ -98,9 +192,10 @@ nav > .wrapper{
     grid-template-areas: 
     'students graduates approval awards'
     ;
+    max-width: 1220px;
 }
 .info > .wrapper div{
-    padding: 2em 0;
+    padding: 3em 0;
 }
 .students{
     grid-area: students;
@@ -114,103 +209,13 @@ nav > .wrapper{
 .awards{
     grid-area: awards;
 }
-
-.info_offers{
-    background-color: #E4FFF9;
-}
-.courses{
-    padding: 50px 0;
-    display: flex;
-    flex-direction: column;
-}
-.courses p{
-    color: #6500CA;
-    font-weight: bold;
-}
-.courses > p, .courses > h2{
+.info-card {
     text-align: center;
 }
-.see_more{
-    align-self: center;
-    margin-bottom: -20px;
-}
-.see_more button{
-    background-color: #6500CA;
-    color: white;
-    border: none;
-    border-radius: 10px;
-    padding: 10px 50px;
-    font-size: larger;
-}
-.see_more button:hover{
-    cursor: pointer;
-}
-.offers{
-    padding-top: 50px;
-    display: grid;
-    /* 7 columns */
-    grid-template-columns: 1fr 1fr 3% 1fr 3% 1fr 3% 1fr 1fr;
-    grid-template-rows: 1fr 20% 20% 20% 1fr;
-}
-.card{
-    border: 3px solid #026E64;
-    background-color: #C1FFF2;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 5px #026E64;
-}
-.card > h3, .card > h5, .card > h6{
-    margin: 15px 0;
-}
-.card > h3{
-    color: #026E64;
-}
-.card button{
-    background-color: transparent;
-    border: 3px solid #6500CA;
-    border-radius: 10px;
+.info-card label {
+    font-size: 1.5em;
     color: #6500CA;
-    padding: 5px 50px;
-}
-.card button:hover{
-    cursor: pointer;
-}
-.card button > p{
     font-weight: 700;
-}
-.card:nth-child(1), .card:nth-child(3){
-    grid-row-start: 1;
-    grid-row-end: 4;
-}
-.card:nth-child(2), .card:nth-child(4){
-    grid-row-start: 2;
-    grid-row-end: 5;
-}
-.card:nth-child(1){
-    grid-column: 2;
-}
-.card:nth-child(2){
-    grid-column: 4;
-}
-.card:nth-child(3){
-    grid-column: 6;
-}
-.card:nth-child(4){
-    grid-column: 8;
-    border: 3px solid #6500CA;
-    background-color: #C1FFF2;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 5px #6500CA;
-}
-.card:nth-child(4) button{
-    background-color: #6500CA;
-    border: none;
-    border-radius: 10px;
-    padding: 5px 50px;
-}
-.card:nth-child(4) button > p{
-    color: white;
 }
 /* Vectors... Hindi ko po alam kung paano ilagay ung bilog bilog kaya nag export nalang po ako para malagay sa bg */
 .vectors{
@@ -221,67 +226,24 @@ nav > .wrapper{
     opacity: 0.8;
 }
 #vec{
-    top: 59px;
+    top: 10px;
     right: 0;
 }
 #vec1{
-    top: 706px;
+    bottom: 20px;
     right: 0;
 }
 #vec2{
-    top: 347px;
+    bottom: 7px;
 }
-@media only screen and (max-width: 1300px){
-    .heroBanner{
-        position: absolute;
-        right: 50px;
-    }
-    .heroBanner > img{
-        height: 100%;
-        width: 100%;
-    }
-    .see_more{
-        margin-top: 75px;
-    }
 
-    .offers{
-        grid-template-rows: 1fr 10% 1fr;
-    }
-    .card:nth-child(1){
-        grid-row: 1;
-        grid-column: 2;
-    }
-    .card:nth-child(2){
-        grid-row: 3;
-        grid-column: 2;
-    }
-    .card:nth-child(3){
-        grid-row: 1;
-        grid-column: 8;
-    }
-    .card:nth-child(4){
-        grid-row: 3;
-        grid-column: 8;
-    }
-}
 @media only screen and (max-width: 900px){
-    header{
-        height: 750px;
-    }
     nav{
         justify-content: space-between;
     }
 
     .wrapper{
         width: 90%;
-    }
-    .bannerText{
-        padding-top: 50px;
-        width: 200px;
-    }
-    .heroBanner > img{
-        height: 601.67px;
-        width: 600px;
     }
 
     #vec, #vec1{
@@ -293,65 +255,51 @@ nav > .wrapper{
     #vec2{
         width: 24%;
     }
-
-    .info_offers > .wrapper{
+}
+@media only screen and (min-width: 800px) {
+    .hamburger {
+        display: none;
+    }
+    .navMenu {
+        margin: 0;
+        display: flex;
+        justify-content: space-between;
+        background: none;
+        position: unset;
+        height: auto;
         width: 100%;
+        padding: 0;
+        flex-direction: row;
+        transform: none;
     }
-    .offers{
-        grid-template-rows: 1fr 1fr;
+    .navMenu li {
+        width: auto;
     }
-    .card:nth-child(2){
-        grid-row: 2;
+    .main-nav .wrapper {
+        align-items: center;
     }
-    .card:nth-child(4){
-        grid-row: 2;
+    .menu {
+        align-items: center;
+    }
+    .navMenu li:hover {
+        background: none;
+        border: none;
+    }
+    .navMenu li:hover a {
+        color: #C1FFF2 !important;
     }
 }
-@media only screen and (max-width: 800px){
-    header{
-        height: 700px;
-    }
-    .heroBanner > img{
-        height: 401.67px;
-        width: 400px;
-    }
-}
-@media only screen and (max-width: 700px){
-    header{
-        height: 650px;
-    }
-    .hamburger{
-        display: block;
-        position: absolute;
-        z-index: 100;
-    }
-    .hamburger.active .bar:nth-child(2){
-        opacity: 0;
-    }
-    .hamburger.active .bar:nth-child(1){
-        transform: translateY(8px) rotate(45045deg);
-    }
-    .hamburger.active .bar:nth-child(3){
-        transform: translateY(-8px) rotate(-45045deg);
-    }
-    .navMenu{
-        position: absolute;
-        right: -1000px;
-        top: 0;
-        gap: 5px;
-        padding: 58px 0 20px;
-        width: 40%;
-        height: 100vh;
-        text-align: center;
-        transition: 0.3s;
-        flex-direction: column;
-        background-color: #026E64;
-        z-index: 100;
-    }
-    .navMenu.active{
-        right: 0;
-    }
 
+
+
+
+
+
+
+@media only screen and (max-width: 800px){
+    /* header{
+        height: 650px;
+    } */
     .info > .wrapper{
         grid-template-areas: 
         'students graduates'
@@ -359,65 +307,26 @@ nav > .wrapper{
         ;
     }
 }
-@media only screen and (max-width: 600px){
-    .bannerText{
-        padding-top: 0;
-        width: 200px;
+@media only screen and (min-width: 716px){
+    .bannerText {
+        text-align: center;
+        width: 100%;
+        
     }
-    .heroBanner {
-        right: 0;
-    }
-    .heroBanner > img{
-        height: 301.67px;
-        width: 300px;
-    }
+}
 
-    .see_more{
-        margin-top: 25px;
+@media only screen and (min-width: 904px) {
+    .heroBanner {
+        display: block;
     }
-    
-}
-@media only screen and (max-width: 500px){
-    .offers{
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-    }
-    .card{
-        margin: 10px 0;
-    }
-    .card:nth-child(1){
-        grid-row: 1;
-        grid-column: 2;
-    }
-    .card:nth-child(2){
-        grid-row: 2;
-        grid-column: 2;
-    }
-    .card:nth-child(3){
-        grid-row: 3;
-        grid-column: 2;
-    }
-    .card:nth-child(4){
-        grid-row: 4;
-        grid-column: 2;
+    .bannerText {
+        text-align: start;
+        max-width: 35em;
     }
 }
-@media only screen and (max-width: 400px){
-    header{
-        height: 575px;
-    }
-    .heroBanner > img{
-        height: 201.67px;
-        width: 200px;
-    }
-}
+
 @media only screen and (max-width: 300px){
-    .landingPage{
-        padding-top: 100px;
-    }
-    .heroBanner{
-        margin-top: -30px;
-    }
+
 
     .info > .wrapper{
         width: 95%;
