--- a/css/indexCSS/Testimonial.css
+++ b/css/indexCSS/Testimonial.css
@@ -18,8 +18,10 @@
     user-select: none;
     cursor: default;
 }
-
-html {
+body {
+    background-color: #E3FFF9;
+}
+/* html {
     width: 100%;
     height: auto;
 }
@@ -30,17 +32,17 @@ body {
     font-size: 16px;
     font-family: Dubai-Light;
 		background: #E3FFF9;
-}
+} */
 
 .testim {
 		width: 100%;
-		position: absolute;
-		top: 50%;
-		-webkit-transform: translatey(-50%);
+		/* position: absolute; */
+		/* top: 50%; */
+		/* -webkit-transform: translatey(-50%);
 		-moz-transform: translatey(-50%);
 		-ms-transform: translatey(-50%);
 		-o-transform: translatey(-50%);
-		transform: translatey(-50%);
+		transform: translatey(-50%); */
 }
 
 .testim .wrap {
@@ -135,7 +137,21 @@ body {
     position: relative;
 		overflow: hidden;
 }
-
+.testim-head {
+    text-align: center;
+    margin-bottom: 2em;
+}
+.testim-head label {
+    color: #6500CA;
+    font-weight: 700;
+}
+.testim-head h2 {
+    font-weight: 700;
+    font-size: 2em;
+}
+.cont p {
+    line-height: 154.52%;
+}
 .testim .cont > div {
     text-align: center;
     position: absolute;
@@ -172,7 +188,7 @@ body {
 
 .testim .cont div p {
     font-size: 1.15em;
-    color: #333333
+    color: #333333;
     width: 80%;
     margin: auto;
 }
