--- a/css/indexCSS/BLOG POST & EVENTS.css
+++ b/css/indexCSS/BLOG POST & EVENTS.css
@@ -5,6 +5,9 @@
     font-family: 'Inter', sans-serif;
 }
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap');
+.blog-section {
+    margin: 5em 0;
+}
 .blog-container {
     width: 90%;
     margin: auto;
